# ExpressionRecognizer-datascience_final

./: Process.py  README.md  Train.py  pyproject.toml  requirements.txt  wsgi.py
app/: Process.py  app.py  main.py  predict_image.py
app/static/styles/: index.css
app/templates/: index.html
